# Pyvizman

./: .gitignore  README.md  example.ipynb  pyproject.toml
Pyvizman/: pyproject.toml
Pyvizman/vizman/: __init__.py  colors.json  helpers.py  sizes.json  viz.py
vizman/: __init__.py  viz.py
