[tool.poetry]
name = "vizman"
version = "0.2.1"
description = "vizman is here to give you nicer printable plots"
authors = ["Kayson Fakhar <kayson.fakhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
