[tool.poetry]
name = "vizman"
version = "0.1.0"
description = "Nicer printable plots"
authors = ["Kayson Fakhar <kayson.fakhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
